Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt: Add AUXEVOL gridfunction type, so that Ricci can be computed separately. Should result in perf boost.

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs-new.ipynb
@@ -525,7 +525,7 @@
     "    \n",
     "    # First generate outdir+gridfunction_defines.h file, \n",
     "    #       containing human-readable gridfunction aliases\n",
-    "    evolved_variables_list,auxiliary_variables_list = gri.output__gridfunction_defines_h__return_gf_lists(outdir)\n",
+    "    evolved_variables_list, auxiliary_variables_list, auxevol_variables_list = gri.output__gridfunction_defines_h__return_gf_lists(outdir)\n",
     "\n",
     "    # Step 3.b: set the parity conditions on all gridfunctions in gf_list,\n",
     "    #       based on how many digits are at the end of their names\n",
@@ -564,31 +564,44 @@
     "                exit(1)\n",
     "        return parity_type\n",
     "\n",
-    "    evol_parity_type = set_parity_types(evolved_variables_list  )\n",
-    "    aux_parity_type  = set_parity_types(auxiliary_variables_list)\n",
+    "    evol_parity_type = set_parity_types(evolved_variables_list)\n",
+    "    aux_parity_type = set_parity_types(auxiliary_variables_list)\n",
+    "    auxevol_parity_type = set_parity_types(auxevol_variables_list)\n",
     "\n",
-    "    # First output all gridfunctions to outdir+\"/gridfunction_defines.h\"\n",
+    "    # Output all gridfunctions to outdir+\"/gridfunction_defines.h\"\n",
     "    # ... then append to the file the parity type for each gridfunction.\n",
-    "    with open(outdir+\"/gridfunction_defines.h\", \"a\") as file:\n",
+    "    with open(outdir + \"/gridfunction_defines.h\", \"a\") as file:\n",
     "        file.write(\"\\n\\n/* PARITY TYPES FOR ALL GRIDFUNCTIONS.\\n\")\n",
-    "        file.write(\"   SEE \\\"Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb\\\" FOR DEFINITIONS. */\\n\")\n",
+    "        file.write(\n",
+    "            \"   SEE \\\"Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb\\\" FOR DEFINITIONS. */\\n\")\n",
     "        if len(evolved_variables_list) > 0:\n",
-    "            file.write(\"const int8_t evol_gf_parity[\"+str(len(evolved_variables_list))+\"] = { \")\n",
-    "            for i in range(len(evolved_variables_list)-1):\n",
-    "                file.write(str(evol_parity_type[i])+\", \")\n",
-    "            file.write(str(evol_parity_type[len(evolved_variables_list)-1])+\" };\\n\")\n",
+    "            file.write(\"const int8_t evol_gf_parity[\" + str(len(evolved_variables_list)) + \"] = { \")\n",
+    "            for i in range(len(evolved_variables_list) - 1):\n",
+    "                file.write(str(evol_parity_type[i]) + \", \")\n",
+    "            file.write(str(evol_parity_type[len(evolved_variables_list) - 1]) + \" };\\n\")\n",
     "\n",
     "        if len(auxiliary_variables_list) > 0:\n",
-    "            file.write(\"const int8_t aux_gf_parity[\"+str(len(auxiliary_variables_list))+\"] = { \")\n",
-    "            for i in range(len(auxiliary_variables_list)-1):\n",
-    "                file.write(str(aux_parity_type[i])+\", \")\n",
-    "            file.write(str(aux_parity_type[len(auxiliary_variables_list)-1])+\" };\\n\")\n",
+    "            file.write(\"const int8_t aux_gf_parity[\" + str(len(auxiliary_variables_list)) + \"] = { \")\n",
+    "            for i in range(len(auxiliary_variables_list) - 1):\n",
+    "                file.write(str(aux_parity_type[i]) + \", \")\n",
+    "            file.write(str(aux_parity_type[len(auxiliary_variables_list) - 1]) + \" };\\n\")\n",
+    "\n",
+    "        if len(auxevol_variables_list) > 0:\n",
+    "            file.write(\"const int8_t auxevol_gf_parity[\" + str(len(auxevol_variables_list)) + \"] = { \")\n",
+    "            for i in range(len(auxevol_variables_list) - 1):\n",
+    "                file.write(str(auxevol_parity_type[i]) + \", \")\n",
+    "            file.write(str(auxevol_parity_type[len(auxevol_variables_list) - 1]) + \" };\\n\")\n",
     "\n",
     "    if verbose == True:\n",
     "        for i in range(len(evolved_variables_list)):\n",
-    "            print(\"Evolved gridfunction \\\"\"+evolved_variables_list[i]+\"\\\" has parity type \"+str(evol_parity_type[i])+\".\")\n",
+    "            print(\"Evolved gridfunction \\\"\" + evolved_variables_list[i] + \"\\\" has parity type \" + str(\n",
+    "                evol_parity_type[i]) + \".\")\n",
     "        for i in range(len(auxiliary_variables_list)):\n",
-    "            print(\"Auxiliary gridfunction \\\"\"+auxiliary_variables_list[i]+\"\\\" has parity type \"+str(aux_parity_type[i])+\".\")"
+    "            print(\"Auxiliary gridfunction \\\"\" + auxiliary_variables_list[i] + \"\\\" has parity type \" + str(\n",
+    "                aux_parity_type[i]) + \".\")\n",
+    "        for i in range(len(auxevol_variables_list)):\n",
+    "            print(\"AuxEvol gridfunction \\\"\" + auxevol_variables_list[i] + \"\\\" has parity type \" + str(\n",
+    "                auxevol_parity_type[i]) + \".\")"
    ]
   },
   {
@@ -1527,10 +1540,10 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.623391866684 seconds.\n",
+      "Finished executing in 0.617892980576 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.218470096588 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.214082956314 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1582,32 +1595,22 @@
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.02574801445 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 1.21977210045 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.218134880066 seconds.\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__D0\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__DD00\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__DDD000\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__D1\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DD11\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DDD111\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.213493108749 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxCart.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/xxminmax.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_opt_Ccodes/boundary_conditions/Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions_opt.CurviBoundaryConditions_opt module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.02532815933 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_opt_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 1.42032289505 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3,4,5 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.216639041901 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.213454961777 seconds.\n",
       "Finished this code cell.\n",
       "\n",
       "\n",
@@ -1676,7 +1679,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 104496 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
+      "[NbConvertApp] Writing 108902 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
