--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "# Step 2.A.2. Output gridfunction #define aliases to file:\n",
     "!mkdir CurviBoundaryConditions 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "evolved_variables_list,auxiliary_variables_list = \\\n",
+    "evolved_variables_list, auxiliary_variables_list, auxevol_variables_list = \\\n",
     "        gri.output__gridfunction_defines_h__return_gf_lists(\"CurviBoundaryConditions\")"
    ]
   },
@@ -254,6 +254,10 @@
       "#define RANKZEROGF\t9\r\n",
       "\r\n",
       "\r\n",
+      " /* AUXEVOL VARIABLES: */\r\n",
+      "#define NUM_AUXEVOL_GFS 0\r\n",
+      "\r\n",
+      "\r\n",
       "/* PARITY TYPES FOR ALL GRIDFUNCTIONS.\r\n",
       "   SEE \"Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb\" FOR DEFINITIONS. */\r\n",
       "const int8_t aux_gf_parity[10] = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 0 };\r\n"
@@ -298,28 +302,39 @@
     "            exit(1)\n",
     "    return parity_type\n",
     "\n",
-    "evol_parity_type = set_parity_types(evolved_variables_list  )\n",
-    "aux_parity_type  = set_parity_types(auxiliary_variables_list)\n",
+    "evol_parity_type = set_parity_types(evolved_variables_list)\n",
+    "aux_parity_type = set_parity_types(auxiliary_variables_list)\n",
+    "auxevol_parity_type = set_parity_types(auxevol_variables_list)\n",
     "\n",
     "with open(\"CurviBoundaryConditions/gridfunction_defines.h\", \"a\") as file:\n",
     "    file.write(\"\\n\\n/* PARITY TYPES FOR ALL GRIDFUNCTIONS.\\n\")\n",
     "    file.write(\"   SEE \\\"Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb\\\" FOR DEFINITIONS. */\\n\")\n",
+    "\n",
     "    if len(evolved_variables_list) > 0:\n",
-    "        file.write(\"const int8_t evol_gf_parity[\"+str(len(evolved_variables_list))+\"] = { \")\n",
-    "        for i in range(len(evolved_variables_list)-1):\n",
-    "            file.write(str(evol_parity_type[i])+\", \")\n",
-    "        file.write(str(evol_parity_type[len(evolved_variables_list)-1])+\" };\\n\")\n",
+    "        file.write(\"const int8_t evol_gf_parity[\" + str(len(evolved_variables_list)) + \"] = { \")\n",
+    "        for i in range(len(evolved_variables_list) - 1):\n",
+    "            file.write(str(evol_parity_type[i]) + \", \")\n",
+    "        file.write(str(evol_parity_type[len(evolved_variables_list) - 1]) + \" };\\n\")\n",
     "\n",
     "    if len(auxiliary_variables_list) > 0:\n",
-    "        file.write(\"const int8_t aux_gf_parity[\"+str(len(auxiliary_variables_list))+\"] = { \")\n",
-    "        for i in range(len(auxiliary_variables_list)-1):\n",
-    "            file.write(str(aux_parity_type[i])+\", \")\n",
-    "        file.write(str(aux_parity_type[len(auxiliary_variables_list)-1])+\" };\\n\")\n",
-    "    \n",
+    "        file.write(\"const int8_t aux_gf_parity[\" + str(len(auxiliary_variables_list)) + \"] = { \")\n",
+    "        for i in range(len(auxiliary_variables_list) - 1):\n",
+    "            file.write(str(aux_parity_type[i]) + \", \")\n",
+    "        file.write(str(aux_parity_type[len(auxiliary_variables_list) - 1]) + \" };\\n\")\n",
+    "\n",
+    "    if len(auxevol_variables_list) > 0:\n",
+    "        file.write(\"const int8_t auxevol_gf_parity[\" + str(len(auxevol_variables_list)) + \"] = { \")\n",
+    "        for i in range(len(auxevol_variables_list) - 1):\n",
+    "            file.write(str(auxevol_parity_type[i]) + \", \")\n",
+    "        file.write(str(auxevol_parity_type[len(auxevol_variables_list) - 1]) + \" };\\n\")\n",
+    "\n",
+    "\n",
     "for i in range(len(evolved_variables_list)):\n",
     "    print(\"Evolved gridfunction \\\"\"+evolved_variables_list[i]+\"\\\" has parity type \"+str(evol_parity_type[i])+\".\")\n",
     "for i in range(len(auxiliary_variables_list)):\n",
     "    print(\"Auxiliary gridfunction \\\"\"+auxiliary_variables_list[i]+\"\\\" has parity type \"+str(aux_parity_type[i])+\".\")\n",
+    "for i in range(len(auxevol_variables_list)):\n",
+    "    print(\"AuxEvol gridfunction \\\"\"+auxevol_variables_list[i]+\"\\\" has parity type \"+str(auxevol_parity_type[i])+\".\")\n",
     "\n",
     "print(\"Output from CurviBoundaryConditions/gridfunction_defines.h (notice the parity types appended to the bottom):\")\n",
     "!cat CurviBoundaryConditions/gridfunction_defines.h"
@@ -609,22 +624,27 @@
     "const int NUL     = +0;\n",
     "const int MINFACE = +1;\n",
     "\n",
-    "\n",
-    "#define OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
+    "#define OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
     "  LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) {                  \\\n",
     "    const int idx3 = IDX3(i0,i1,i2);                                    \\\n",
-    "    if(bc_gz_map[idx3].i0 == -1 && inner==0) {                          \\\n",
+    "    if(bc_gz_map[idx3].i0 == -1) {                                      \\\n",
     "      gfs[IDX4(which_gf,i0,i1,i2)] =                                    \\\n",
     "        +3.0*gfs[IDX4(which_gf,i0+1*FACEX0,i1+1*FACEX1,i2+1*FACEX2)]    \\\n",
     "        -3.0*gfs[IDX4(which_gf,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]    \\\n",
     "        +1.0*gfs[IDX4(which_gf,i0+3*FACEX0,i1+3*FACEX1,i2+3*FACEX2)];   \\\n",
-    "    } else if(bc_gz_map[idx3].i0 != -1 && inner==1) {                   \\\n",
-    "     gfs[IDX4(which_gf,i0,i1,i2)] =                                    \\\n",
+    "    }                                                                   \\\n",
+    "  }\n",
+    "\n",
+    "#define OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
+    "  LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) {                  \\\n",
+    "    const int idx3 = IDX3(i0,i1,i2);                                    \\\n",
+    "    if(bc_gz_map[idx3].i0 != -1) {                                      \\\n",
+    "      gfs[IDX4(which_gf,i0,i1,i2)] =                                    \\\n",
     "        ( (REAL)bc_parity_conditions[idx3].parity[gfs_parity[which_gf]] )* \\\n",
-    "                                             gfs[IDX4(which_gf,           \\\n",
-    "                                                    bc_gz_map[idx3].i0, \\\n",
-    "                                                    bc_gz_map[idx3].i1, \\\n",
-    "                                                    bc_gz_map[idx3].i2)]; \\\n",
+    "        gfs[IDX4(which_gf,                                              \\\n",
+    "                 bc_gz_map[idx3].i0,                                    \\\n",
+    "                 bc_gz_map[idx3].i1,                                    \\\n",
+    "                 bc_gz_map[idx3].i2)];                                  \\\n",
     "    }                                                                   \\\n",
     "  }\n",
     "\n",
@@ -638,19 +658,34 @@
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "    int imax[3] = { Nxx_plus_2NGHOSTS[0]-NGHOSTS, Nxx_plus_2NGHOSTS[1]-NGHOSTS, Nxx_plus_2NGHOSTS[2]-NGHOSTS };\n",
     "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
-    "      for(int inner=0;inner<2;inner++) {\n",
-    "        // After updating each face, adjust imin[] and imax[] \n",
-    "        //   to reflect the newly-updated face extents.\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
     "\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "      // First apply OUTER boundary conditions,\n",
+    "      //   in case an INNER (parity) boundary point\n",
+    "      //   needs data at the outer boundary:\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
     "\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
-    "        OB_UPDATE(inner,which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
-    "        if(inner==0) { for(int ii=0;ii<3;ii++) {imin[ii]++; imax[ii]--;} }\n",
-    "      }\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "      OB_UPDATE_OUTER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
+    "\n",
+    "      // Then apply INNER (parity) boundary conditions:\n",
+    "      for(int ii=0;ii<3;ii++) {imin[ii]++; imax[ii]--;}\n",
+    "      // After updating each face, adjust imin[] and imax[] \n",
+    "      //   to reflect the newly-updated face extents.\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); imin[2]--;\n",
+    "      OB_UPDATE_INNER(which_gf, bc_gz_map,bc_parity_conditions, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); imax[2]++;\n",
+    "\n",
     "    }\n",
     "  }\n",
     "}"
@@ -922,11 +957,11 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.628187894821 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.821406126022 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.223826885223 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.213351964951 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -989,13 +1024,11 @@
       "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.620012044907 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.821196079254 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.226057052612 seconds.\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.214704990387 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions/gridfunction_defines.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
@@ -1003,11 +1036,11 @@
       "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.628010988235 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "Finished executing in 0.818950891495 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.218764066696 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "Finished executing in 0.215003013611 seconds.\n",
       "Finished this code cell.\n",
       "\n",
       "\n",
@@ -1074,7 +1107,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 100706 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
+      "[NbConvertApp] Writing 110822 bytes to Tutorial-Start_to_Finish-Curvilinear_BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
