--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -203,7 +203,8 @@
     "        if not os.path.isfile(main_C_output_file):\n",
     "            print(\"Sorry, compilation failed\")\n",
     "            sys.exit(1)\n",
-    "    if compile_mode==\"icc\":\n",
+    "    elif compile_mode==\"icc\":\n",
+    "        check_executable_exists(\"icc\")\n",
     "        compile_string = \"icc -O2 -xHost -qopenmp -unroll \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
     "        Execute_input_string(compile_string, os.devnull)\n",
     "        # Check if executable exists (i.e., compile was successful), if not, try with more conservative compile flags.\n",
@@ -517,7 +518,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-cmdline_helper.ipynb to latex\n",
-      "[NbConvertApp] Writing 44962 bytes to Tutorial-cmdline_helper.tex\n",
+      "[NbConvertApp] Writing 49868 bytes to Tutorial-cmdline_helper.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
