SEOBNR: compute ALL constant coefficients in one routine.  May need to make a structure so notation isn't cumbersome.

--- a/Tutorial-SEOBNR_Constant_Coefficients.ipynb
+++ b/Tutorial-SEOBNR_Constant_Coefficients.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "def compute_const_coeffs(eta, gamma):\n",
+    "def compute_const_coeffs(eta, gamma, a):\n",
     "    # Euler–Mascheroni constant $\\gamma$\n",
     "\n",
     "    c20 = 1.712\n",
@@ -85,8 +85,24 @@
     "    kC7 = -35.12753102199746*tmp10 + 25.6*gamma*tmp10 - 32.*KK*tmp19 + 4.443359375*tmp10*tmp28 + tmp32 - 32.*tmp18*tmp37 - 62.666666666666664*tmp4 + 2.5625*tmp28*tmp4 + 4.*tmp19*tmp6 - 64.*tmp34*tmp6 - 5.333333333333334*tmp36*tmp64 + 8.*tmp7 - 62.666666666666664*KK*tmp7 + 2.5625*KK*tmp28*tmp7 - 0.2666666666666661*KK**5*EtaKKm1**10\n",
     "    kC8 = -10.*KK*tmp16 + 32.*KK*tmp19 - 12.*tmp18*tmp34 + 16.*tmp18*tmp37 - 1.3333333333333337*tmp36*tmp37 - 24.*tmp19*tmp6 + 48.*tmp34*tmp6 + 1.3333333333333337*tmp36*tmp64 - 2.*tmp7 + 2.*KK*tmp7\n",
     "    kC9 = 4.*KK*tmp16 - 6.*KK*tmp19 - tmp18*tmp19 + 2.*tmp18*tmp34 - tmp18*tmp37 - 2.*tmp16*tmp6 + 8.*tmp19*tmp6 - 6.*tmp34*tmp6\n",
-    "    \n",
-    "    return KK, kC0, kC1, kC2, kC3, kC4, kC5, kC6, kC7, kC8, kC9"
+    "\n",
+    "    asq = a*a\n",
+    "    aft = asq*asq\n",
+    "\n",
+    "    k0 = KK*(EtaKKm1 - 1)\n",
+    "    k1 = -2*(k0 + KK)*EtaKKm1\n",
+    "    k2 = kC0 + kC1*asq\n",
+    "    k3 = kC2 + kC3*asq\n",
+    "    k4 = kC4 + kC5*asq + kC6*aft\n",
+    "    k5 = kC7 + kC8*asq + kC9*aft\n",
+    "    k5l = EtaKKm1*EtaKKm1*64./5.\n",
+    "\n",
+    "    d1 = -69.5\n",
+    "    d1v2 = -74.71 - 156.*eta + 627.5*eta*eta\n",
+    "    dheffSS = 2.75\n",
+    "    dheffSSv2 = 8.127 - 154.2*eta + 830.8*eta*eta\n",
+    "\n",
+    "    return KK, kC0, kC1, kC2, kC3, kC4, kC5, kC6, kC7, kC8, kC9, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2"
    ]
   },
   {
