--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -310,24 +310,24 @@
     "        params.SINHW=  sinh_width;\\n\"\"\"\n",
     "    elif CoordSystem == \"SymTP\":\n",
     "        coordparams += \"\"\"\n",
-    "        const REAL bScale =  SymTP_bScale;\n",
-    "        const REAL AMAX   =  domain_size;\\n\"\"\"\n",
+    "        params.bScale =  SymTP_bScale;\n",
+    "        params.AMAX   =  domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"Cartesian\":\n",
     "        coordparams += \"\"\"\n",
-    "        const REAL xmin = -domain_size, xmax = domain_size;\n",
-    "        const REAL ymin = -domain_size, ymax = domain_size;\n",
-    "        const REAL zmin = -domain_size, zmax = domain_size;\\n\"\"\"\n",
+    "        params.xmin = -domain_size, xmax = domain_size;\n",
+    "        params.ymin = -domain_size, ymax = domain_size;\n",
+    "        params.zmin = -domain_size, zmax = domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"Cylindrical\":\n",
     "        coordparams += \"\"\"\n",
-    "        const REAL ZMIN   = -domain_size;\n",
-    "        const REAL ZMAX   =  domain_size;\n",
-    "        const REAL RHOMAX =  domain_size;\\n\"\"\"\n",
+    "        params.ZMIN   = -domain_size;\n",
+    "        params.ZMAX   =  domain_size;\n",
+    "        params.RHOMAX =  domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"SinhCylindrical\":\n",
     "        coordparams += \"\"\"\n",
-    "        const REAL AMPLRHO = domain_size;\n",
-    "        const REAL SINHWRHO= sinh_width;\n",
-    "        const REAL AMPLZ   = domain_size;\n",
-    "        const REAL SINHWZ  = sinh_width;\\n\"\"\"\n",
+    "        params.AMPLRHO = domain_size;\n",
+    "        params.SINHWRHO= sinh_width;\n",
+    "        params.AMPLZ   = domain_size;\n",
+    "        params.SINHWZ  = sinh_width;\\n\"\"\"\n",
     "    file.write(coordparams+\"\\n\")\n",
     "    file.write(\"\"\"\n",
     "// Step 0d: Set up space and time coordinates\n",
@@ -675,14 +675,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 1.21963095665 seconds.\n",
+      "Finished executing in 1.41578793526 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.212262868881 seconds.\n",
+      "Finished executing in 0.412901878357 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 0.613615989685 seconds.\n",
+      "Finished executing in 0.813961982727 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 18.0891399384 seconds.\n"
+      "Finished executing in 18.294754982 seconds.\n"
      ]
     }
    ],
@@ -838,7 +838,9 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb to latex\n",
-      "[NbConvertApp] Writing 97808 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files/\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files\n",
+      "[NbConvertApp] Writing 90443 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
